# trommelkreis

./: .buildpacks  .devcontainer.json  .dockerignore  .envrc  .gitignore  Dockerfile  Procfile  README.md  __init__.py  build_database.py  challenge.html  compose.yaml  git-post-receive-hook.sh  gulpfile.js  home.html  index.py  manage.py  package-lock.json  package.json  passenger_wsgi.py  pyproject.toml  requirements.txt  sessions.html  single_session.html  sql_test.py  sql_test2.py  sql_test3.py  stylish.css  wavtomp3.sh
.github/workflows/: build_push_deploy.yml  caprover-deploy.yml  codeql-analysis.yml  deploy-preview.yml  deploy-production.yml  deploy.yml
archive/: MP3Field.py  admin.py  api.py  forms.py  models.py  schema.py  urls.py  views.py
archive/migrations/: 0001_initial.py  0002_auto_20200525_0011.py  0002_uploadformvars.py  0003_auto_20200516_0035.py  0003_auto_20210405_1737.py  0004_audiofile_duration.py  0004_auto_20200516_0038.py  0005_auto_20210405_1817.py  0005_challenge_copyright_issues.py  0006_auto_20200516_1236.py  0006_auto_20210405_2300_squashed_0007_remove_audiofile_duration.py  0007_auto_20200516_1237.py  0007_auto_20210412_1432.py  0008_challenge_slug.py  0009_remove_audiofile_session.py  0010_auto_20200516_1401.py  0011_audiofile_session.py  0012_remove_session_info.py  0013_uploadformvars_session_info.py  0014_auto_20200518_0240.py  0014_auto_20200518_0243.py  0015_audiofile_session_subsection.py  0016_auto_20200521_0042.py  0017_delete_uploadformvars.py
archive/templates/: home.html  info.html  layout.html  upload.html  upload_form.html
archive/templatetags/: file_filters.py  session_filters.py
prisma/: schema.prisma
scripts/: wavtomp3.sh
scss/: stylish.scss
src/: app.scss  spinner.scss
src/lib/: ErrorMessage.svelte  Spinner.svelte
src/routes/: +error.svelte  +layout.svelte  +page.js  +page.svelte
templates/: archiv.html  archive.jinja  challenge.html  challenge.jinja  error.jinja  home.html  home.jinja  info.html  info.jinja  layout.html  layout.jinja  session.html  session.jinja  session_not_found.jinja  subscribe.jinja  upload.html  upload.jinja
trommelkreis/: __init__.py  archive.py  asgi.py  config.py  manage.py  settings.py  sql_archive.py  urls.py  vars.py  views.py  wsgi.py
trommelkreis/archive/: admin.py  models.py  urls.py
trommelkreis_flask/: __init__.py  archive.py  config.py  vars.py  views.py
uploadform/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+86 files in other folders)
