[tool.poetry]
authors = ["Fabian Hummel <fshstk@fshstk.com>"]
description = "Django-based website for 'Digitaler Trommelkreis' – a social music production project"
license = "GPL v3.0"
name = "trommelkreis"
version = "2.2.1"

[tool.poetry.dependencies]
Django = "3.2.20"
Markdown = "3.3.6"
dj-database-url = "0.5.0"
django-compressor = "2.4.1"
django-gulp = "4.1.0"
django-libsass = "0.9"
django-pagedown = "2.2.1"
django-solo = "1.2.0"
graphene = "2.1.9"
graphene-django = "2.15.0"
gunicorn = "20.1.0"
mutagen = "1.45.1"
mysqlclient = "2.1.0"
python = "^3.10"
whitenoise = "5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
