[project]
name = "trommelkreis"
version = "3.0.0"
description = "Django-based website for 'Digitaler Trommelkreis' – a social music production project"
authors = [{ name = "Fabian Hummel", email = "fshstk@fshstk.com" }]
requires-python = ">=3.12,<3.13"
license = "GPL-3.0-or-later"
dependencies = [
  "Django~=5.1",
  "Markdown~=3.7",
  "dj-database-url~=2.0",
  "django-compressor~=4.0",
  "django-pagedown>=2.2.1,<3",
  "django-solo~=2.0",
  "gunicorn~=23.0",
  "mutagen~=1.47",
  "mysqlclient~=2.2",
  "whitenoise~=6.0",
  "django-storages>=1.14.4,<2",
  "boto3>=1.35.90,<2",
  "django-debug-toolbar>=5.0.1,<6",
]

[project.scripts]
dev = "manage:dev"
clean = "manage:clean"
collectstatic = "manage:collectstatic"
start = "manage:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trommelkreis"]
